--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,9 +22,9 @@
   },
   /* include /index.ts*/
   "include": ["src", "./index.ts"],
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  // "files": [],
+  // "references": [
+    // { "path": "./tsconfig.app.json" },
+  //   { "path": "./tsconfig.node.json" }
+  // ]
 }
